SGAS BART ChangeLog

007:

Fixed bug in SLURM backend that removes last char in hostname(s) from sacct.

Fixed problem with translate(None) on python 2.4.

RPM Spec file for bart provided by Pär Andersson <paran@nsc.liu.se>

Fixed problem with getNodes in SLURM backend.

Fix end of line strip issue in SLURM backend.

Patch to make slurm only advance 7 days at a time.
(This will be configurable in the future release)

Fixed bug with vo_map in slurm (not used correct).

Created unittest för slurm.py (and removed small testcase in slurm.py).

006:

Added option to suppress missing usermap info in log file. 

Fix problems with exit(0) if an error occur.

Updated setup instructions.

005:

Use utc/gm time for record id (SLURM backend).

Fix subprocess output gathering not to deadlock (SLURM backend).

Add idtimestamp for dealing with job reruns and documentation for using it.

004:

Added documentation with relocation instructions.

Make torque backend work on cray machines with old torque version (patch by
Alexander Oltu)

Torque backend: Catch ioerror while spooling and chance error to warnings as
the situation does not call for an exit.

Fix SLURM data gathering for account, state and cpu time (patch by Bjørn-Helge
Mevik)

Skip empty files when joining usagerecords files (prevents registration crash).

Add logic to deal with empty statefile (prevents logger crash).


003:

Added SLURM support.

Add basic documentation for developing new backends.

Fix bug where installation could overwrite existing configuration files.

Properly report project name in Torque backend.

Fix issue with undefined core_count in Torque backend.


002:

Support relocation using --home

Report exit status in Torque backend

Properly report core count on older Torque system

Use the account, if available, for VO mapping in Torque backend.

Add description of how data is collected for the backends

List package names required for CentOS/RedHat


001:
